<resources>
    <string name="app_name">ClockiO</string>
    <string name="no_timecards_message">No timecards yet.</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account_button_text">Create account</string>
    <string name="login_button_text">Login</string>
    <string name="welcome_text">Welcome!</string>
    <string name="create_account_text_message">Create account</string>
    <string name="back_to_login_button_description">Back to login</string>
    <string name="back_button_text">Back</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="new_timecard_title_dialog">New Timecard</string>
    <string name="cancel_text">Cancel</string>
    <string name="clockin_text">Clock in</string>
    <string name="job_name_text">Enter a name for this job</string>
    <string name="create_text">Create</string>
    <string name="clockin_msg">This will immediately clock you in.</string>
    <string name="your_timecard_title">Your timecard</string>
    <string name="job_title_detail_title">Job title:</string>
    <string name="job_title_detail_text">Job title</string>
    <string name="date_detail_title">Date:</string>
    <string name="date_detail_text">Date</string>
    <string name="clocked_in_detail_title">Clocked in:</string>
    <string name="clocked_in_text">Clocked in</string>
    <string name="clocked_out_detail_title">Clocked out:</string>
    <string name="clocked_out_detail_text">Clocked out</string>
    <string name="total_hours_detail_title">Total hours:</string>
    <string name="total_hours_detail_text">Total hours</string>
    <string name="working_clocked_out_indicator_text">Working/Clocked out</string>
    <string name="job_title_pc_title">Job title:</string>
    <string name="job_title_pc_text">Job title</string>
    <string name="date_pc_title">Date:</string>
    <string name="date_pc_text">date</string>
    <string name="clocked_in_pc_title">Clocked in:</string>
    <string name="clockin_pc_text">clockin</string>
    <string name="thirty_minutes_text">30 minutes</string>
    <string name="one_hour_text">1 hour</string>
    <string name="job_title_list_title">Job Title</string>
    <string name="date_started_list_title">Date started:</string>
    <string name="total_hours_worked_list_title">Total hours worked:</string>
    <string name="date_list_text">Date</string>
    <string name="hours_worked_list_text">Hours worked</string>
    <string name="working_pc_text">Working.</string>
    <string name="clock_out_pc_text">Clock out</string>
    <string name="not_working_pc_text">Not working.</string>
    <string name="clock_in_pc_text">Clock in</string>
    <string name="timecard_added_msg">Timecard added successfully!</string>
    <string name="timecard_added_err_message">There was an unforeseen error.</string>
    <string name="delete_timecard_title">Delete timecard</string>
    <string name="delete_timecard_message">Are you sure you want to delete this timecard?</string>
    <string name="delete_button_text">Delete</string>
    <string name="cancel_text_button">Cancel</string>
    <string name="email_pw_err_msg">Oops, something went wrong! Make sure your email and password are correct.</string>
    <string name="create_accnt_err_msg">Oops! Something went wrong creating your account. We\'ll look into.</string>
    <string name="empty_email_msg">Email field is empty.</string>
    <string name="invalid_email_msg">Not a valid email.</string>
    <string name="invalid_pw_msg">Password must have at least 6 characters.</string>
    <string name="empty_pw_msg">Password field is empty.</string>
    <string name="ok_text">OK</string>
    <string name="unpaid_break_text">Set unpaid break time</string>
    <string name="set_text">Set</string>
    <string name="no_break_text">I didn\'t take a break</string>
    <string name="sign_out_text">Sign out</string>

    <string name="banner_ad_unit_id">xxxxxxxxx</string>
    <string name="app_ad_id">xxxxxxxxxx</string>

</resources>
