<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/your_timecard_title"
        android:textSize="32sp"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="2">
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:padding="8dp"
                    android:text="@string/job_title_detail_title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/detail_jobtitle"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:text="@string/job_title_detail_text"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:padding="8dp"
                    android:text="@string/date_detail_title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/detail_date"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:text="@string/date_detail_text"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:padding="8dp"
                    android:text="@string/clocked_in_detail_title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/detail_clockin"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:text="@string/clocked_in_text"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:padding="8dp"
                    android:text="@string/clocked_out_detail_title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/detail_clockout"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:text="@string/clocked_out_detail_text"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:padding="8dp"
                    android:text="@string/total_hours_detail_title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/detail_totalhours"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:text="@string/total_hours_detail_text"
                    android:textSize="24sp" />
            </TableRow>

        </TableLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>