<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/working_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/working_clocked_out_indicator_text"
            android:textColor="@color/colorGreenClockin"
            android:textSize="30sp"/>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="2">

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:padding="8dp"
                        android:text="@string/job_title_pc_title"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/job_title"
                        android:padding="8dp"
                        android:text="@string/job_title_pc_text"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:padding="8dp"
                        android:text="@string/date_pc_title"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/date_stamp"
                        android:padding="8dp"
                        android:text="@string/date_pc_text"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:padding="8dp"
                        android:text="@string/clocked_in_pc_title"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/clockinTime"
                        android:padding="8dp"
                        android:text="@string/clockin_pc_text"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </TableRow>

            </TableLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>


    <Button
        android:id="@+id/clockin_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/clockin_button_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/clockin_text"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>