<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/list_item_parent"
    android:longClickable="true"
    android:paddingTop="8dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_title_list_title"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"/>

            <TextView
                android:id="@+id/date_started_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/job_title"
                android:layout_marginTop="8dp"
                android:text="@string/date_started_list_title"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <TextView
                android:id="@+id/total_hours_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_started_header"
                android:layout_marginTop="8dp"
                android:text="@string/total_hours_worked_list_title"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <TextView
                android:id="@+id/date_started"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/date_started_header"
                android:layout_alignParentEnd="true"
                android:text="@string/date_list_text"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/total_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/total_hours_header"
                android:layout_alignParentEnd="true"
                android:text="@string/hours_worked_list_text"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>