<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_alertdialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:hint="@string/job_name_text"/>
    </android.support.design.widget.TextInputLayout>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:weightSum="1.0"
       android:orientation="horizontal">

       <TextView
           android:id="@+id/clockin_msg"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_gravity="start|center_vertical"
           android:layout_weight="0.65"
           android:visibility="invisible"
           android:text="@string/clockin_msg"/>

       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="0.35"
           android:orientation="horizontal">

           <CheckBox
               android:id="@+id/clockin_check"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:buttonTint="@color/colorGreenClockin"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/clockin_text"/>

       </LinearLayout>



   </LinearLayout>

</LinearLayout>